tests/golden/type_errors/array_find_nullable_named_callback_parameter.cd
fun onlyNumber(value: number): bool { return value > 0; }
find([1, nil], onlyNumber);
