tests/golden/type_errors/array_find_nullable_named_callback_parameter.err
Type error at 2:26: find callback expects number?, got number
  find([1, nil], onlyNumber);
                           ^
